--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
+<!DOCTYPE html>
 <html>
+  <head>
 
-dmitry a. markelov
+  <meta charset="utf-8">
+  <meta name+"viewport" content="width=device-width, initial-scale=1">
+  <title>Dmitry Markelov's Website</title>
+  
+  </head>
 
+  <body>
+    
+hi ny name is <b>dmitry a. markelov</b>
+    
+  </body>
 </html>
