--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     
-hi my name is <b>dmitry a. markelov</b>
+<h1>hi my name is <b>dmitry a. markelov</b> </h1>
     
   </body>
 </html>
