--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <body>
     
 <h1>hi my name is <b>dmitry a. markelov</b> </h1>
-    
+
+
+
+        <h1>Audio Player</h1>
+    <audio controls>
+        <source src="9.wav" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
   </body>
 </html>
