--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <h1>Audio Player</h1>
     <audio controls>
-        <source src="9.wav" type="audio/mpeg">
+        <source src="" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
   </body>
