--- a/index.html
+++ b/index.html
@@ -10,9 +10,59 @@
 
   <body>
     
-<h1>hi my name is <b>dmitry a. markelov</b> </h1>
+<p>Hi, my name is <b>Dmitry A. Markelov.</b></p>
 
+<p><b>You are</b> visiting my website - welcome!</p>
 
+<p>Make sure to check back for updates, or simply join my <i>not-so-frequent</i> newsletter:</p>
+    <form action="process-form.php" method="post">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <input type="submit" value="Subscribe">
+    </form>
+
+<p>My spoken-word project <b>"A Moment's Reprise" by DARKDMTR</b> will release everywhere on September 14th, 2023.
+
+<a href="https://distrokid.com/hyperfollow/darkdmtr/a-moments-reprise-2" target="_blank">Pre-save on Spotify here</a>
+
+and <a href="https://www.instagram.com/darkdmtr/" target="_blank">follow on Instagram.</a></p>
+
+<p>Below, you will find links to other projects I've done. <b>Click them!</b></p>
+
+<p><a href="https://www.amazon.com/dp/B0C5PJRHDQ?ref_=cm_sw_r_apin_dp_M0BJVA8EK7ZAFX472DC0_1" target="_blank">undone : a book of poems</a></p>
+
+<p><a href="https://sites.libsyn.com/456594/faucetsofreality" target="_blank">Faucets Of Reality podcast</a></p>
+
+<p><a href="https://novelfilms.itch.io/" target="_blank">Novel Films Games</a></p>
+
+<br>
+
+<p>Social Media: @dmitrymakelove</p>
+
+<p><a href="https://www.instagram.com/dmitrymakelove/" target="_blank">Instagram</a></p>
+<p><a href="https://twitter.com/@dmitrymakelove" target="_blank">X (Twitter)</a></p>
+<p><a href="http://www.linkedin.com/in/dmitrymarkelov" target="_blank">LinkedIn</a></p>
+<p><a href="https://www.paypal.com/paypalme/dmarkelo" target="_blank">Love donations</a></p>
+
+<br>
+
+<p>Some things about me. (Kind of how my life has gone so far.) I was born September 7th, 1989 in 
+<a href="https://en.wikipedia.org/wiki/Moscow" target="_blank">Moscow, Russia</a>. In August of 1996, me and 
+my family immigrated overseas and started living the American Dream in Brooklyn, NY. In 2001, we moved 
+to Rockland County - Suffern, NY to be exact. Around this time, I developed a deep love for guitar
+and songwriting. After finishing High School there, I started going to RCC (Rockland Community College). 
+At the same time I was the lead vocalist in a post-hardc0re band called Vital Limit. After we broke up, 
+and during the <a href="https://en.wikipedia.org/wiki/Occupy_movement" target="_blank">Occupy movement of 2011</a>, I 
+packed my bag and traveled the country by myself mostly by bus (at other times by train, truck, and 
+once by <a href="https://en.wikipedia.org/wiki/Semi-trailer_truck" target="_blank">16-wheel semi</a>). After making it 
+all the way to Los Angeles and having had achieved what I set out to do, I bought a plane ticket home. 
+I moved to New Paltz Village in 2012 to continue college at New Paltz University, and in May of 2016 I 
+had finished my Bachelor of Arts in Computer Science. After that, and due to my love of California, I 
+drove across the country on a beat up 1996 Dodge Escort on $700. I started fixing phones at the Carlsbad 
+Mall, got an apartment and started a new life. After covid left me homeless on Venice beach (and trust me, 
+I loved every minute of living in my car on the beach), I moved to Milwaukee, WI for a better quality of life 
+(you know: apartment, hot water, shower, etc.) which is where I reside now. I have many new projects in 
+the works for you all so stay tuned! Love, DM</p>
 
   </body>
 </html>
