--- a/index.html
+++ b/index.html
@@ -14,12 +14,7 @@
 
 <p><b>You are</b> visiting my website - welcome!</p>
 
-<p>Make sure to check back for updates, or simply join my <i>not-so-frequent</i> newsletter:</p>
-    <form action="process-form.php" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <input type="submit" value="Subscribe">
-    </form>
+<p>Make sure to check back for updates, like this:</p>
 
 <p>My spoken-word project <b>"A Moment's Reprise" by DARKDMTR</b> will release everywhere on September 14th, 2023.
 
