--- a/index.html
+++ b/index.html
@@ -10,27 +10,30 @@
 
   <body>
     
-<p>Hi, my name is <b>Dmitry A. Markelov.</b></p>
+<h1><p>Hi, my name is Dmitry A. Markelov.</p></h1>
 
-<p><b>You are</b> visiting my website - welcome!</p>
+<p><b>You are</b> visiting my website - <i>welcome!</i></p>
 
-<p>Make sure to check back for updates, like this:</p>
+<h2><p>My highest mission is to inspire YOU to create.</p></h2>
 
-<p>My spoken-word project <b>"A Moment's Reprise" by DARKDMTR</b> will release everywhere on September 14th, 2023.
+<p>Bear with me as this page undergoes changes while I learn to code HTML,</p> 
+<p>and so make sure to also check back for updates, like this:</p>
 
-<a href="https://distrokid.com/hyperfollow/darkdmtr/a-moments-reprise-2" target="_blank">Pre-save on Spotify here</a>
+<h3><p>My spoken-word project "A Moment's Reprise" under the moniker of DARKDMTR will release everywhere on September 14th, 2023.</h3>
+
+To be one of the first to hear it: <a href="https://distrokid.com/hyperfollow/darkdmtr/a-moments-reprise-2" target="_blank">Pre-save on Spotify here</a>
 
 and <a href="https://www.instagram.com/darkdmtr/" target="_blank">follow on Instagram.</a></p>
 
-    <br>
+<br>
 
-<p>Below, you will find links to other projects I've done. <b>Click them!</b></p>
+<p><i>Below,</i> you will find links to projects I've done. <b>Click them!</b></p>
 
-<p><a href="https://www.amazon.com/dp/B0C5PJRHDQ?ref_=cm_sw_r_apin_dp_M0BJVA8EK7ZAFX472DC0_1" target="_blank">undone : a book of poems</a></p>
+<p><a href="https://www.amazon.com/dp/B0C5PJRHDQ?ref_=cm_sw_r_apin_dp_M0BJVA8EK7ZAFX472DC0_1" target="_blank">"undone : a book of poems"</a> - Recently self-published, get my first poetry book that has been over a decade in the making. Sure to inspire you, or at least give you something new to behold.</p>
 
-<p><a href="https://sites.libsyn.com/456594/faucetsofreality" target="_blank">Faucets Of Reality podcast</a></p>
+<p><a href="https://sites.libsyn.com/456594/faucetsofreality" target="_blank">Faucets Of Reality podcast</a> - The thesis of this project is that each one of us is a faucet of wisdom just waiting to be tapped. Mostly philosophical and cultural, I am planning to have guests on soon. Reach out if you’d like to be on it!</p>
 
-<p><a href="https://novelfilms.itch.io/" target="_blank">Novel Films Games</a></p>
+<p><a href="https://novelfilms.itch.io/" target="_blank">Novel Films Games</a>- A tiny game development studio of which I am the founding (only) member! I look forward to growing this into a robust creative environment focusing on the pinnacle of all the arts in our modern times — video games. Here you can play some of my first creations :) <a href="https://instagram.com/novel.films/" target="_blank">follow on ig for news.</a></p>
 
 <br>
 
@@ -42,6 +45,10 @@ and <a href="https://www.instagram.com/darkdmtr/" target="_blank">follow on Inst
 <p><a href="https://www.paypal.com/paypalme/dmarkelo" target="_blank">Love donations</a></p>
 
 <br>
+
+<p>Finally, feel free to email me at dmarkelo89@gmail.com</p>
+
+<p>Have a great day!</p>
 
 
   </body>
