--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ and <a href="https://www.instagram.com/darkdmtr/" target="_blank">follow on Inst
 
 <br>
 
-<p><i>Below,</i> you will find links to projects I've done. <b>Click them!</b></p>
+<p><i>Below,</i> you will find links to some of my projects. <b>Click them!</b></p>
 
 <p><a href="https://www.amazon.com/dp/B0C5PJRHDQ?ref_=cm_sw_r_apin_dp_M0BJVA8EK7ZAFX472DC0_1" target="_blank">"undone : a book of poems"</a> - Recently self-published, get my first poetry book that has been over a decade in the making. Sure to inspire you, or at least give you something new to behold.</p>
 
