--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <meta name+"viewport" content="width=device-width, initial-scale=1">
   <title>Dmitry Markelov's Website</title>
+      <style>
+        body {
+            font-size: 30px; /* Adjust the value as needed */
+        }
+    </style>
   
   </head>
 
@@ -19,7 +24,7 @@
 <p>Bear with me as this page undergoes changes while I learn to code HTML,</p> 
 <p>and so make sure to also check back for updates, like this:</p>
 
-<h3><p>My spoken-word project "A Moment's Reprise" under the moniker of DARKDMTR will release everywhere on September 14th, 2023.</h3>
+<h4><p>My spoken-word project "A Moment's Reprise" under the moniker of DARKDMTR will release everywhere on September 14th, 2023.</h4>
 
 To be one of the first to hear it: <a href="https://distrokid.com/hyperfollow/darkdmtr/a-moments-reprise-2" target="_blank">Pre-save on Spotify here</a>
 
@@ -27,7 +32,7 @@ and <a href="https://www.instagram.com/darkdmtr/" target="_blank">follow on Inst
 
 <br>
 
-<p><i>Below,</i> you will find links to some of my projects. <b>Click them!</b></p>
+<p><i>Below,</i> you will find links to projects I've done. <b>Click them!</b></p>
 
 <p><a href="https://www.amazon.com/dp/B0C5PJRHDQ?ref_=cm_sw_r_apin_dp_M0BJVA8EK7ZAFX472DC0_1" target="_blank">"undone : a book of poems"</a> - Recently self-published, get my first poetry book that has been over a decade in the making. Sure to inspire you, or at least give you something new to behold.</p>
 
