--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 <h2><p>My highest mission is to inspire YOU to create.</p></h2>
 
-<p>Bear with me as this page undergoes changes while I learn to code HTML,</p> 
-<p>and so make sure to also check back for updates, like this:</p>
+<p>Bear with me as this page undergoes changes while I learn to code HTML, and so make sure to also check back for updates, like this:</p>
 
 <h4><p>My spoken-word project "A Moment's Reprise" under the moniker of DARKDMTR will release everywhere on September 14th, 2023.</h4>
 
