--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
 
 <p><b>You are</b> visiting my website - <i>welcome!</i></p>
 
-<h2><p>My highest mission is to inspire YOU to create.</p></h2>
-
 <p>Bear with me as this page undergoes changes while I learn to code HTML, and so make sure to also check back for updates, like this:</p>
 
-<h4><p>My spoken-word project "A Moment's Reprise" under the moniker of DARKDMTR will release everywhere on September 14th, 2023.</h4>
+<h4><p>Listen to my newest project, a spoken-word album called "A Moment's Reprise" by DARKDMTR.</h4>
 
-To be one of the first to hear it: <a href="https://distrokid.com/hyperfollow/darkdmtr/a-moments-reprise-2" target="_blank">Pre-save on Spotify here</a>
-
-and <a href="https://www.instagram.com/darkdmtr/" target="_blank">follow on Instagram.</a></p>
+<a href="https://www.linktr.ee/darkdmtr/" target="_blank">listen on spotify/apple music.</a> or search DARKDMTR anywhere.</p>
 
 <br>
 
