--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
 
   <body>
+
+    <a href="website/test.html">"test page"</a>
     
 <h1><p>Hi, my name is Dmitry A. Markelov.</p></h1>
 
