--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
 
-    <a href="test.html">"test page</a>
+<img src=”insignia.png”>
     
 <h1><p>Hi, my name is Dmitry A. Markelov.</p></h1>
 
