--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
 
-<img src=”insignia.png”>
+<p><img src="insignia.png" alt="Dmitry's insignia"></p>
     
 <h1><p>Hi, my name is Dmitry A. Markelov.</p></h1>
 
