--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
 <p><b>You are</b> visiting my website - <i>welcome!</i></p>
 
-<p>Bear with me as this page undergoes changes while I learn to code HTML, and so make sure to also check back for updates, like this:</p>
+<p>Version 1.1 of my first book called "undone : a book of poems" is complete! In honor of that I
+  am taking orders for signed copies. Reach out to me directly if you'd like one. Makes a great gift
+  for the upcoming holiday season for anyone who has ever appreciated the written word. 📖🎁🤍
+</p>
 
 <h4><p>Listen to my newest project, a spoken-word album called "A Moment's Reprise" by DARKDMTR.</h4>
 
