--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -4,7 +4,7 @@
 
 Privacy Policy
 
-Effective Date: [Date]
+Effective Date: 10.25.23
 
 Introduction
 
@@ -64,17 +64,9 @@ If you have any questions or concerns regarding this Privacy Policy or our priva
 
 By using our website or services, you consent to the terms of this Privacy Policy.
 
-[Your Company Name]
-
-[Your Company Address]
-
-[City, State, ZIP]
-
-[Your Email Address]
-
-[Your Phone Number]
-
-[Date]
+    
+    --Dmitry A. Markelov
+    dmarkelo89@gmail.com
 
 </body?
 </body>
