--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -60,7 +60,7 @@ We may update this Privacy Policy from time to time. Any changes will be posted 
 
 Contact Us
 
-If you have any questions or concerns regarding this Privacy Policy or our privacy practices, please contact us at [Your Contact Information].
+If you have any questions or concerns regarding this Privacy Policy or our privacy practices, please contact us at dmarkelo89@gmail.com.
 
 By using our website or services, you consent to the terms of this Privacy Policy.
 
